plugins {
    id 'java'
	id 'org.jetbrains.kotlin.jvm'
}

group = 'com.example.code'
def versionName = 'SNAPSHOT beta'
def versionCode = '1.0'
version = versionCode + '-' + versionName

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    implementation 'org.jetbrains:annotations:23.0.0'
	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"

}

compileJava {
    options.compilerArgs += ["--enable-preview"]
}

tasks.withType(JavaExec) {
    jvmArgs += "--enable-preview"
}

test {
    useJUnitPlatform()
}

kotlin {
	jvmToolchain(21)
}